--- a/services/speaker/Makefile
+++ b/services/speaker/Makefile
@@ -1,21 +1,21 @@
-NAME=task2
+NAME=speaker
 BUILD=../../build
 DISK=$(BUILD)/disk.img
 DISKMOUNT=../../disk
-BIN=$(BUILD)/user_$(NAME).bin
-DUMP=$(BUILD)/user_$(NAME).dump
-DEP=$(BUILD)/user_$(NAME).dep
+BIN=$(BUILD)/service_$(NAME).bin
+DUMP=$(BUILD)/service_$(NAME).dump
+DEP=$(BUILD)/service_$(NAME).dep
 LIBC=../../libc
 LDCONF=$(LIBC)/ld.conf
 
 CC = gcc
-CFLAGS = -g -nostdlib -nostartfiles -nodefaultlibs -I$(LIBC)/h -I../../lib/h -I$(LIBC)/test \
+CFLAGS = -g -nostdlib -nostartfiles -nodefaultlibs -I$(LIBC)/h -I../../lib/h \
 	-Wl,-T,$(LDCONF) $(CWFLAGS) 
 CSRC=$(wildcard *.c)
 
 LIBCA=$(BUILD)/libc.a
 START=$(BUILD)/libc_startup.o
-COBJ=$(patsubst %.c,$(BUILD)/user_$(NAME)_%.o,$(CSRC))
+COBJ=$(patsubst %.c,$(BUILD)/service_$(NAME)_%.o,$(CSRC))
 LIBCOBJS=$(filter-out $(START),$(wildcard $(BUILD)/libc_*.o))
 
 .PHONY: all clean
@@ -26,7 +26,7 @@ $(BIN):	$(LDCONF) $(COBJ) $(START) $(LIBCA)
 		@echo "===== COMPILING & LINKING =====";
 		$(CC) $(CFLAGS) -o $(BIN) $(START) $(COBJ) $(LIBCA);
 
-$(BUILD)/user_$(NAME)_%.o:		%.c
+$(BUILD)/service_$(NAME)_%.o:		%.c
 		@echo "===== COMPILING $< =====";
 		$(CC) $(CFLAGS) -o $@ -c $<
 
@@ -38,9 +38,9 @@ $(DEP):	$(CSRC)
 		@echo "===== GENERATING DEPENDENCIES =====";
 		$(CC) $(CFLAGS) -MM $(CSRC) > $(DEP);
 		@# prefix all files with the build-path (otherwise make wouldn't find them)
-		sed --in-place -e "s/\([a-zA-Z_]*\).o:/$(subst /,\/,$(BUILD)\/user_$(NAME)_)\1.o:/g" $(DEP);
+		sed --in-place -e "s/\([a-zA-Z_]*\).o:/$(subst /,\/,$(BUILD)\/service_$(NAME)_)\1.o:/g" $(DEP);
 
 -include $(DEP)
 
 clean:
-		rm -f $(BIN) $(DUMP) $(COBJ)
+		rm -f $(BIN) $(DUMP) $(COBJ) $(DEP)
