--- a/user/shell/Makefile
+++ b/user/shell/Makefile
@@ -4,32 +4,52 @@ DISK=$(BUILD)/disk.img
 DISKMOUNT=../../disk
 BIN=$(BUILD)/user_$(NAME).bin
 DUMP=$(BUILD)/user_$(NAME).dump
+DEP=$(BUILD)/user_$(NAME).dep
 LIBC=../../libc
 LDCONF=$(LIBC)/ld.conf
-LIBCA=$(BUILD)/libc.a
-START=$(BUILD)/libc_startup.o
-LIBCOBJS=$(filter-out $(START),$(wildcard $(BUILD)/libc_*.o))
 
 CC = gcc
 CFLAGS = -g -nostdlib -nostartfiles -nodefaultlibs -I$(LIBC)/h -I../../lib/h -I$(LIBC)/test \
 	-Wl,-T,$(LDCONF) $(CWFLAGS) 
-CSRC=$(wildcard *.c) $(wildcard cmd/*.c)
+CSRC=$(wildcard *.c)
+CCMDSRC=$(wildcard cmd/*.c)
+
+LIBCA=$(BUILD)/libc.a
+START=$(BUILD)/libc_startup.o
+COBJ=$(patsubst %.c,$(BUILD)/user_$(NAME)_%.o,$(CSRC))
+CCMDOBJ=$(patsubst cmd/%.c,$(BUILD)/user_$(NAME)_cmd_%.o,$(CCMDSRC))
+LIBCOBJS=$(filter-out $(START),$(wildcard $(BUILD)/libc_*.o))
 
 .PHONY: all clean
 
 all:	$(BIN) $(DUMP)
 
-$(BIN):	$(LDCONF) $(CSRC) $(START) $(LIBCA)
+$(BIN):	$(LDCONF) $(COBJ) $(CCMDOBJ) $(START) $(LIBCA)
 		@echo "===== COMPILING & LINKING =====";
-		$(CC) $(CFLAGS) -o $(BIN) $(START) $(CSRC) $(LIBCA);
-		@echo "===== COPYING BINARY =====";
-		sudo mount -o loop $(DISK) $(DISKMOUNT);
-		cp $(BIN) $(DISKMOUNT);
-		sudo umount $(DISKMOUNT);
+		$(CC) $(CFLAGS) -o $(BIN) $(START) $(COBJ) $(CCMDOBJ) $(LIBCA);
+
+$(BUILD)/user_$(NAME)_%.o:		%.c
+		@echo "===== COMPILING $< =====";
+		$(CC) $(CFLAGS) -o $@ -c $<
+
+$(BUILD)/user_$(NAME)_cmd_%.o:		cmd/%.c
+		@echo "===== COMPILING $< =====";
+		$(CC) $(CFLAGS) -o $@ -c $<
 
 $(DUMP):	$(BIN)
 		@echo "===== GENERATING DUMP =====";
 		$(BUILD)/dump $(BIN) $(DUMP)
 
+$(DEP):	$(CSRC) $(CCMDSRC)
+		@echo "===== GENERATING DEPENDENCIES =====";
+		$(CC) $(CFLAGS) -MM $(CSRC) $(CCMDSRC) > $(DEP);
+		@# prefix all files with the build-path (otherwise make wouldn't find them)
+		sed --in-place -e "s/\([a-zA-Z_]*\).o:/$(subst /,\/,$(BUILD)\/user_$(NAME)_)\1.o:/g" $(DEP);
+		@for i in $(patsubst cmd/%.c,%,$(wildcard cmd/*.c)) ; do \
+			sed --in-place -e "s/$(subst /,\/,$(BUILD)/user_$(NAME)_)$$i.o:/$(subst /,\/,$(BUILD)/user_$(NAME)_cmd_)$$i.o:/g" $(DEP); \
+		done;
+
+-include $(DEP)
+
 clean:
-		rm -f $(BIN) $(DUMP)
+		rm -f $(BIN) $(DUMP) $(DEP) $(COBJ) $(CCMDOBJ)
