--- a/services/speaker/Makefile
+++ b/services/speaker/Makefile
@@ -3,7 +3,6 @@ BUILD=../../build
 DISK=$(BUILD)/disk.img
 DISKMOUNT=../../disk
 BIN=$(BUILD)/service_$(NAME).bin
-DUMP=$(BUILD)/service_$(NAME).dump
 DEP=$(BUILD)/service_$(NAME).dep
 LIBC=../../libc
 LDCONF=$(LIBC)/ld.conf
@@ -19,7 +18,7 @@ COBJ=$(patsubst %.c,$(BUILD)/service_$(NAME)_%.o,$(CSRC))
 
 .PHONY: all clean
 
-all:	$(BIN) $(DUMP)
+all:	$(BIN)
 
 $(BIN):	$(LDCONF) $(COBJ) $(START) $(LIBCA)
 		@echo "===== COMPILING & LINKING =====";
@@ -33,10 +32,6 @@ $(BUILD)/service_$(NAME)_%.o:		%.c
 		@echo "===== COMPILING $< =====";
 		$(CC) $(CFLAGS) -o $@ -c $<
 
-$(DUMP):	$(BIN)
-		@echo "===== GENERATING DUMP =====";
-		$(BUILD)/dump $(BIN) $(DUMP)
-
 $(DEP):	$(CSRC)
 		@echo "===== GENERATING DEPENDENCIES =====";
 		$(CC) $(CFLAGS) -MM $(CSRC) > $(DEP);
@@ -46,4 +41,4 @@ $(DEP):	$(CSRC)
 -include $(DEP)
 
 clean:
-		rm -f $(BIN) $(DUMP) $(COBJ) $(DEP)
+		rm -f $(BIN) $(COBJ) $(DEP)
