Added the env-service (not completely finished yet), extended the signals (added an integer as data) and added basic env-functions to the libc

--- a/services/Makefile
+++ b/services/Makefile
@@ -1,12 +1,19 @@
 BUILD = ../build
 DIRS = $(filter-out $(wildcard *.*) Makefile,$(wildcard *))
+HDDMOUNT = ../disk
+SERVICES = services.txt
 
-.PHONY:  all clean
+.PHONY:  all serv clean
 
-all:
+all:	serv
 		@for i in $(DIRS) ; do \
 			$(MAKE) -C $$i all || { echo "Make: Error (`pwd`)"; exit 1; } ; \
 		done;
+
+serv:	$(SERVICES)
+		make -C .. mounthdd
+		sudo cp $(SERVICES) $(HDDMOUNT)/etc/services
+		make -C .. umounthdd
 
 clean:
 		@for i in $(DIRS) ; do \
