Booting from disk :)

--- a/bochs.cfg
+++ b/bochs.cfg
@@ -4,7 +4,7 @@ display_library: sdl
 megs: 32
 romimage: file="/usr/share/bochs/BIOS-bochs-latest", address=0x00000
 vgaromimage: file="/usr/share/vgabios/vgabios.bin"
-boot: floppy
+boot: disk
 floppya: 1_44="build/disk.img", status=inserted
 # no floppyb
 ata0: enabled=1, ioaddr1=0x1f0, ioaddr2=0x3f0, irq=14
@@ -26,7 +26,8 @@ vga_update_interval: 40000
 vga: extension=vbe
 keyboard_serial_delay: 250
 keyboard_paste_delay: 100000
-cpu: count=1, ips=12000000
+keyboard_mapping: enabled=1, map=/usr/share/bochs/keymaps/x11-pc-de.map
+cpu: count=1, ips=8000000
 #text_snapshot_check: 0
 mouse: enabled=0
 private_colormap: enabled=0
