Improved bufio and wrote a libc-test user-app

--- a/libc/Makefile
+++ b/libc/Makefile
@@ -5,16 +5,13 @@ CC = gcc
 CFLAGS = -g -nostdlib -nostartfiles -nodefaultlibs $(CWFLAGS) -I$(LIBDIR)/h
 
 CSRCS = $(wildcard src/*.c)
-TSRCS = $(wildcard test/*.c)
 ASRCS = $(wildcard src/*.s)
 LSRC=$(filter-out $(LIBDIR)/src/video.c,$(wildcard $(LIBDIR)/src/*.c))
 OBJS = $(patsubst src/%.c,$(BUILD)/libc_%.o,$(CSRCS))
 OBJS += $(patsubst src/%.s,$(BUILD)/libc_a%.o,$(ASRCS))
-OBJS += $(patsubst test/%.c,$(BUILD)/libc_t%.o,$(TSRCS))
 LOBJ=$(patsubst $(LIBDIR)/src/%.c,$(BUILD)/libc_lib_%.o,$(LSRC))
 LIB = $(BUILD)/libc.a
 DEP = $(BUILD)/libc.dep
-TDEP = $(BUILD)/libctest.dep
 START = startup.s
 STARTO = $(BUILD)/libc_startup.o
 
@@ -27,10 +24,6 @@ $(LIB): $(OBJS) $(LOBJ) $(STARTO)
 		ar rcs $(LIB) $(OBJS) $(LOBJ)
 
 $(BUILD)/libc_%.o: src/%.c
-		@echo "===== COMPILING $< =====";
-		$(CC) $(CFLAGS) -o $@ -c $<
-
-$(BUILD)/libc_t%.o: test/%.c
 		@echo "===== COMPILING $< =====";
 		$(CC) $(CFLAGS) -o $@ -c $<
 
@@ -52,15 +45,8 @@ $(DEP):	$(CSRCS)
 		@# prefix all files with the build-path (otherwise make wouldn't find them)
 		sed --in-place -e "s/\([a-zA-Z_]*\).o:/$(subst /,\/,$(BUILD))\/libc_\1.o:/g" $(DEP);
 
-$(TDEP): $(TSRCS)
-		@echo "===== GENERATING TEST-DEPENDENCIES =====";
-		$(CC) $(CFLAGS) -MM $(TSRCS) > $(TDEP)
-		@# prefix all files with the build-path (otherwise make wouldn't find them)
-		sed --in-place -e "s/\([a-zA-Z_]*\).o:/$(subst /,\/,$(BUILD))\/libc_t\1.o:/g" $(TDEP);
-
 -include $(DEP)
--include $(TDEP)
 
 clean:
 		@echo "===== REMOVING FILES =====";
-		rm -f $(OBJS) $(LOBJ) $(LIB) $(DEP) $(TDEP) $(STARTO)
+		rm -f $(OBJS) $(LOBJ) $(LIB) $(DEP) $(STARTO)
