Fixed and improved many things. Extended the libc-test, added the progress app, extended getClient(), changed vterm, init and the shell so that vterm announces multiple services, init starts multiple shells and the shells create stdin, stdout and so on. So we can switch via ctrl+1/2/... through the vterms :) Additionally, fs and ata are now loaded via multiboot-modules and we have a small program "initloader" in the kernel which simply performs an exec() to replace with init

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -9,7 +9,7 @@ DEP=$(BUILD)/kernel.dep
 LIB=../lib
 
 CC = gcc
-CFLAGS = -g -fno-inline -ffreestanding -nostdlib -nostartfiles -nodefaultlibs $(CWFLAGS) \
+CFLAGS = -fno-inline -ffreestanding -nostdlib -nostartfiles -nodefaultlibs $(CDEFFLAGS) \
 	-D IN_KERNEL=1 -I$(LIB)/h
 
 # sources
@@ -78,8 +78,8 @@ $(SERVICES): $(SERVBINS)
 
 $(AOBJ):	$(ASRC) $(ASRCEND)
 		@echo "===== ASSEMBLING =====";
-		nasm -g -f elf -o $(AOBJ) $(ASRC);
-		nasm -g -f elf -o $(AOBJEND) $(ASRCEND);
+		nasm $(ASMFLAGS) -o $(AOBJ) $(ASRC);
+		nasm $(ASMFLAGS) -o $(AOBJEND) $(ASRCEND);
 
 $(BUILD)/%.o:		src/%.c
 		@echo "===== COMPILING $< =====";
