--- a/kernel/test/Makefile
+++ b/kernel/test/Makefile
@@ -9,8 +9,8 @@ DEP=$(BUILD)/test.dep
 LIB=../../lib
 
 CC = gcc
-CFLAGS = -g -fno-inline -ffreestanding -nostdlib -nostartfiles -nodefaultlibs $(CWFLAGS) \
-	-D DEBUGGING=1 -D TESTING=1 -D IN_KERNEL=1 -I$(LIB)/h
+CFLAGS = -fno-inline -ffreestanding -nostdlib -nostartfiles -nodefaultlibs $(CDEFFLAGS) \
+	-D TESTING=1 -D IN_KERNEL=1 -I$(LIB)/h
 
 # sources
 TSRC=$(wildcard *.c)
