--- a/user/init/Makefile
+++ b/user/init/Makefile
@@ -3,14 +3,13 @@ BUILD=../../build
 DISK=$(BUILD)/disk.img
 DISKMOUNT=../../disk
 BIN=$(BUILD)/user_$(NAME).bin
-DUMP=$(BUILD)/user_$(NAME).dump
 DEP=$(BUILD)/user_$(NAME).dep
 LIBC=../../libc
 LDCONF=$(LIBC)/ld.conf
 
 CC = gcc
-CFLAGS = -g -nostdlib -nostartfiles -nodefaultlibs -I$(LIBC)/h -I../../lib/h -I$(LIBC)/test \
-	-Wl,-T,$(LDCONF) $(CWFLAGS) 
+CFLAGS = -nostdlib -nostartfiles -nodefaultlibs -I$(LIBC)/h -I../../lib/h \
+	-Wl,-T,$(LDCONF) $(CDEFFLAGS) 
 CSRC=$(wildcard *.c)
 
 LIBCA=$(BUILD)/libc.a
@@ -19,19 +18,19 @@ COBJ=$(patsubst %.c,$(BUILD)/user_$(NAME)_%.o,$(CSRC))
 
 .PHONY: all clean
 
-all:	$(BIN) $(DUMP)
+all:	$(BIN)
 
 $(BIN):	$(LDCONF) $(COBJ) $(START) $(LIBCA)
 		@echo "===== COMPILING & LINKING =====";
 		$(CC) $(CFLAGS) -o $(BIN) $(START) $(COBJ) $(LIBCA);
+		@echo "===== COPYING ON DISK =====";
+		@make -C ../../ mounthdd
+		sudo cp $(BIN) $(DISKMOUNT)/apps/$(NAME)
+		@make -C ../../ umounthdd
 
 $(BUILD)/user_$(NAME)_%.o:		%.c
 		@echo "===== COMPILING $< =====";
 		$(CC) $(CFLAGS) -o $@ -c $<
-
-$(DUMP):	$(BIN)
-		@echo "===== GENERATING DUMP =====";
-		$(BUILD)/dump $(BIN) $(DUMP)
 
 $(DEP):	$(CSRC)
 		@echo "===== GENERATING DEPENDENCIES =====";
@@ -42,4 +41,4 @@ $(DEP):	$(CSRC)
 -include $(DEP)
 
 clean:
-		rm -f $(BIN) $(DUMP) $(COBJ) $(DEP)
+		rm -f $(BIN) $(COBJ) $(DEP)
