--- a/services/winmanager/Makefile
+++ b/services/winmanager/Makefile
@@ -1,22 +1,19 @@
-NAME=guitest
-ROOT=../../..
-BUILD=$(ROOT)/build
+NAME=winmanager
+BUILD=../../build
 DISK=$(BUILD)/disk.img
-DISKMOUNT=$(ROOT)/disk
-BIN=$(BUILD)/user_$(NAME).bin
-DEP=$(BUILD)/user_$(NAME).dep
-LIB=$(ROOT)/lib
-LIBC=$(ROOT)/libc
+DISKMOUNT=../../disk
+BIN=$(BUILD)/service_$(NAME).bin
+DEP=$(BUILD)/service_$(NAME).dep
+LIBC=../../libc
 LDCONF=$(LIBC)/ld.conf
 
 CC = gcc
-CFLAGS = -nostdlib -nostartfiles -nodefaultlibs -I$(LIBC)/include -I$(LIB)/h \
-	-Wl,-T,$(LDCONF) $(CDEFFLAGS) 
+CFLAGS = -nostdlib -nostartfiles -nodefaultlibs -I$(LIBC)/include -I../../lib/h -Wl,-T,$(LDCONF) $(CDEFFLAGS) 
 CSRC=$(wildcard *.c)
 
 LIBCA=$(BUILD)/libc.a
 START=$(BUILD)/libc_startup.o
-COBJ=$(patsubst %.c,$(BUILD)/user_$(NAME)_%.o,$(CSRC))
+COBJ=$(patsubst %.c,$(BUILD)/service_$(NAME)_%.o,$(CSRC))
 
 .PHONY: all clean
 
@@ -26,11 +23,11 @@ $(BIN):	$(LDCONF) $(COBJ) $(START) $(LIBCA)
 		@echo "===== COMPILING & LINKING =====";
 		$(CC) $(CFLAGS) -o $(BIN) $(START) $(COBJ) $(LIBCA);
 		@echo "===== COPYING ON DISK =====";
-		@make -C $(ROOT) mounthdd
-		sudo cp $(BIN) $(DISKMOUNT)/bin/$(NAME)
-		@make -C $(ROOT) umounthdd
+		@make -C ../../ mounthdd
+		sudo cp $(BIN) $(DISKMOUNT)/services/$(NAME)
+		@make -C ../../ umounthdd
 
-$(BUILD)/user_$(NAME)_%.o:		%.c
+$(BUILD)/service_$(NAME)_%.o:		%.c
 		@echo "===== COMPILING $< =====";
 		$(CC) $(CFLAGS) -o $@ -c $<
 
@@ -38,7 +35,7 @@ $(DEP):	$(CSRC)
 		@echo "===== GENERATING DEPENDENCIES =====";
 		$(CC) $(CFLAGS) -MM $(CSRC) > $(DEP);
 		@# prefix all files with the build-path (otherwise make wouldn't find them)
-		sed --in-place -e "s/\([a-zA-Z_]*\).o:/$(subst /,\/,$(BUILD)\/user_$(NAME)_)\1.o:/g" $(DEP);
+		sed --in-place -e "s/\([a-zA-Z_]*\).o:/$(subst /,\/,$(BUILD)\/service_$(NAME)_)\1.o:/g" $(DEP);
 
 -include $(DEP)
 
