--- a/user/c/initloader/Makefile
+++ b/user/c/initloader/Makefile
@@ -9,26 +9,34 @@ LIBC=$(ROOT)/libc
 LDCONF=$(LIBC)/ld.conf
 
 CC = gcc
-CFLAGS = -nostdlib -nostartfiles -nodefaultlibs -Wl,-T,$(LDCONF) $(CDEFFLAGS) 
+CFLAGS = -nostdlib -nostartfiles -nodefaultlibs -Wl,-T,$(LDCONF) $(CDEFFLAGS) \
+	-I$(ROOT)/lib/h -I$(LIBC)/include
 
 ASRC=$(wildcard *.s)
 AOBJ=$(patsubst %.s,$(BUILD)/user_$(NAME)_%.o,$(ASRC))
+
+CSRC=$(wildcard *.c)
+COBJ=$(patsubst %.c,$(BUILD)/user_$(NAME)_c%.o,$(CSRC))
 
 .PHONY: all clean
 
 all:	$(BIN) $(DUMP)
 
-$(BIN):	$(LDCONF) $(AOBJ)
+$(BIN):	$(LDCONF) $(AOBJ) $(COBJ)
 		@echo "===== LINKING =====";
-		$(CC) $(CFLAGS) -o $(BIN) $(AOBJ);
+		$(CC) $(CFLAGS) -o $(BIN) $(AOBJ) $(COBJ) $(BUILD)/libc.a;
 
 $(BUILD)/user_$(NAME)_%.o: %.s
 		@echo "===== ASSEMBLING $< =====";
 		nasm $(ASMFLAGS) -o $@ $<
+
+$(BUILD)/user_$(NAME)_c%.o: %.c
+		@echo "===== COMPILING $< =====";
+		$(CC) $(CFLAGS) -o $@ -c $<
 
 $(DUMP):	$(BIN)
 		@echo "===== GENERATING DUMP =====";
 		$(BUILD)/dump $(BIN) > $(DUMP)
 
 clean:
-		rm -f $(BIN) $(DUMP) $(AOBJ)
+		rm -f $(BIN) $(DUMP) $(AOBJ) $(COBJ)
