--- a/bochs.cfg
+++ b/bochs.cfg
@@ -42,7 +42,7 @@ debugger_log: debug.txt
 panic: action=fatal
 error: action=report
 info: action=report
-debug: action=ignore
+debug: action=report
 pass: action=fatal
 keyboard_mapping: enabled=0, map=
 keyboard_type: mf
