Threads are working now =) At least it seems to run all stuff that was running before. Still much to do ...

--- a/bochs.cfg
+++ b/bochs.cfg
@@ -42,7 +42,7 @@ debugger_log: debug.txt
 panic: action=fatal
 error: action=report
 info: action=report
-debug: action=report
+debug: action=ignore
 pass: action=fatal
 keyboard_mapping: enabled=0, map=
 keyboard_type: mf
