--- a/user/cpp/guishell/Makefile
+++ b/user/cpp/guishell/Makefile
@@ -30,7 +30,7 @@ $(BIN):	$(LDCONF) $(COBJ) $(START) $(LIBCPPA) $(LIBSHELLA)
 		$(CC) $(CFLAGS) -o $(BIN) $(START) $(COBJ) $(LIBCPPA) $(LIBSHELLA);
 		@echo "===== COPYING ON DISK =====";
 		@make -C $(ROOT) mounthdd
-		sudo cp $(BIN) $(DISKMOUNT)/bin/$(NAME)
+		$(SUDO) cp $(BIN) $(DISKMOUNT)/bin/$(NAME)
 		@make -C $(ROOT) umounthdd
 
 $(BUILD)/user_$(NAME)_%.o:		%.cpp
