--- a/user/c/ls/Makefile
+++ b/user/c/ls/Makefile
@@ -27,7 +27,7 @@ $(BIN):	$(LDCONF) $(COBJ) $(START) $(LIBCA)
 		$(CC) $(CFLAGS) -o $(BIN) $(START) $(COBJ) $(LIBCA);
 		@echo "===== COPYING ON DISK =====";
 		@make -C $(ROOT) mounthdd
-		sudo cp $(BIN) $(DISKMOUNT)/bin/$(NAME)
+		$(SUDO) cp $(BIN) $(DISKMOUNT)/bin/$(NAME)
 		@make -C $(ROOT) umounthdd
 
 $(BUILD)/user_$(NAME)_%.o:		%.c
