--- a/user/cpp/gtest/Makefile
+++ b/user/cpp/gtest/Makefile
@@ -28,7 +28,7 @@ $(BIN):	$(LDCONF) $(COBJ) $(START) $(LIBCPPA)
 		$(CC) $(CFLAGS) -o $(BIN) $(START) $(COBJ) $(LIBCPPA);
 		@echo "===== COPYING ON DISK =====";
 		@make -C $(ROOT) mounthdd
-		sudo cp $(BIN) $(DISKMOUNT)/bin/$(NAME)
+		$(SUDO) cp $(BIN) $(DISKMOUNT)/bin/$(NAME)
 		@make -C $(ROOT) umounthdd
 
 $(BUILD)/user_$(NAME)_%.o:		%.cpp
